# w1nja2

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
include/: ConnectionHandler.h  FileHandler.h  LinuxInterface.h  NetworkingInterface.h  Peer.h  PeerDiscovery.h  WinsockInterface.h
src/: CMakeLists.txt  ConnectionHandler.cpp  FileHandler.cpp  LinuxInterface.cpp  Peer.cpp  PeerDiscovery.cpp  WinsockInterface.cpp  WinsockInterface.h  main.cpp
